--- a/index.html
+++ b/index.html
@@ -15,15 +15,28 @@
             </div>
         </div>
     </header>
-    <div class="container-1">
+    <div class="container">
         <div class="home-title">
             <h2> nossos melhores momentos juntos! </h2>
         </div>
+        <!-- <div class="row">
+            <div class="col-sm-4">
+                <img class="imagens" src="../1year/img/PrimeiroRole.jpeg" alt="">
+            </div>
+            <div class="col-sm-4">
+                <img class="imagens" src="../1year/img/PrimeiroRole2.jpeg" alt="">
+            </div>
+            <div class="col-sm-4">
+                <img class="imagens" src="../1year/img/PrimeiraVezSuaCasa.jpeg" alt="">
+            </div>
+        </div> -->
         <div class="img-box">
             <div class="imagens">
-
+                <img src="../1year/img/PrimeiroRole.jpeg" alt="">
+                <img src="../1year/img/PrimeiraVezSuaCasa.jpeg" alt="">
+                <img src="../1year/img/PrimeiroRole2.jpeg" alt="">
             </div>
-        </div>
+        </div> 
     </div>
 </body>
 </html>
