--- a/index.html
+++ b/index.html
@@ -32,11 +32,55 @@
         </div> -->
         <div class="img-box">
             <div class="imagens">
-                <img src="../1year/img/PrimeiroRole.jpeg" alt="">
-                <img src="../1year/img/PrimeiraVezSuaCasa.jpeg" alt="">
-                <img src="../1year/img/PrimeiroRole2.jpeg" alt="">
+                <div class="estil-img">
+                    <h2> Primeiro Role Juntos </h2>
+                    <img src="../1year/img/PrimeiroRole2.jpeg" alt="">
+                    <div class="botao">
+                        <a href="">Ver mais </a>
+                    </div>
+                </div>
+                <div class="estil-img">
+                    <h2> Primeira vez mais próximos </h2>
+                    <img src="../1year/img/PrimeiroRole.jpeg" alt="">
+                    <div class="botao">
+                        <a href=""> Ver mais </a>
+                    </div>
+                </div>
+                <div class="estil-img">
+                    <h2> Role do Hamburguer </h2>
+                    <img src="../1year/img/Role do Hamburguer.jpeg" alt="">
+                    <div class="botao">
+                        <a href=""> Ver mais </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="img-box">
+            <div class="imagens">
+                <div class="estil-img">
+                    <h2> Primeiro Role Juntos </h2>
+                    <img src="../1year/img/PrimeiroRole2.jpeg" alt="">
+                    <div class="botao">
+                        <a href="">Ver mais </a>
+                    </div>
+                </div>
+                <div class="estil-img">
+                    <h2> Primeira vez mais próximos </h2>
+                    <img src="../1year/img/PrimeiroRole.jpeg" alt="">
+                    <div class="botao">
+                        <a href=""> Ver mais </a>
+                    </div>
+                </div>
+                <div class="estil-img">
+                    <h2> Role do Hamburguer </h2>
+                    <img src="../1year/img/Role do Hamburguer.jpeg" alt="">
+                    <div class="botao">
+                        <a href=""> Ver mais </a>
+                    </div>
+                </div>
             </div>
         </div> 
     </div>
+    <script src="../1year/js/script.js"></script>
 </body>
 </html>
