--- a/index.html
+++ b/index.html
@@ -33,24 +33,21 @@
         <div class="img-box">
             <div class="imagens">
                 <div class="estil-img">
-                    <h2> Primeiro Role Juntos </h2>
                     <img src="../1year/img/PrimeiroRole2.jpeg" alt="">
-                    <div class="botao">
-                        <a href="">Ver mais </a>
+                    <div class="conteudo">
+                        <a href="">Primeiro Rolê</a>
                     </div>
                 </div>
                 <div class="estil-img">
-                    <h2> Primeira vez mais próximos </h2>
                     <img src="../1year/img/PrimeiroRole.jpeg" alt="">
-                    <div class="botao">
-                        <a href=""> Ver mais </a>
+                    <div class="conteudo">
+                        <a href="">Role na pracinha</a>
                     </div>
                 </div>
                 <div class="estil-img">
-                    <h2> Role do Hamburguer </h2>
                     <img src="../1year/img/Role do Hamburguer.jpeg" alt="">
-                    <div class="botao">
-                        <a href=""> Ver mais </a>
+                    <div class="conteudo">
+                        <a href="">Noite do Hamburguer</a>
                     </div>
                 </div>
             </div>
@@ -58,24 +55,21 @@
         <div class="img-box">
             <div class="imagens">
                 <div class="estil-img">
-                    <h2> Primeiro Role Juntos </h2>
-                    <img src="../1year/img/PrimeiroRole2.jpeg" alt="">
-                    <div class="botao">
-                        <a href="">Ver mais </a>
+                    <img src="../1year/img/PrimeiraVezSuaCasa.jpeg" alt="">
+                    <div class="conteudo">
+                        <a href="">Conhecendo sua Familia</a>
                     </div>
                 </div>
                 <div class="estil-img">
-                    <h2> Primeira vez mais próximos </h2>
                     <img src="../1year/img/PrimeiroRole.jpeg" alt="">
-                    <div class="botao">
-                        <a href=""> Ver mais </a>
+                    <div class="conteudo">
+                        <a href="">A</a>
                     </div>
                 </div>
                 <div class="estil-img">
-                    <h2> Role do Hamburguer </h2>
                     <img src="../1year/img/Role do Hamburguer.jpeg" alt="">
-                    <div class="botao">
-                        <a href=""> Ver mais </a>
+                    <div class="conteudo">
+                        <a href="">A</a>
                     </div>
                 </div>
             </div>
