--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="img-box">
             <div class="imagens">
-                <div class="estil-img">
+                <div class="estil-img margem">
                     <img src="../1year/img/PrimeiraVezSuaCasa.jpeg" alt="">
                     <div class="conteudo">
                         <a href="">Conhecendo sua Familia</a>
