--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>365 Dias Com Você !</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/itens.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
@@ -32,42 +33,38 @@
         </div> -->
         <div class="img-box">
             <div class="imagens">
-                <div class="estil-img">
-                    <img src="../1year/img/PrimeiroRole2.jpeg" alt="">
+                <div class="estil-img item1">
+                    <img src="../img/PrimeiroRole2.jpeg" alt="">
                     <div class="conteudo">
                         <a href="">Primeiro Rolê</a>
                     </div>
                 </div>
-                <div class="estil-img">
-                    <img src="../1year/img/PrimeiroRole.jpeg" alt="">
+                <div class="estil-img item2">
+                    <img src="../img/PrimeiroRole.jpeg" alt="">
                     <div class="conteudo">
                         <a href="">Role na pracinha</a>
                     </div>
                 </div>
-                <div class="estil-img">
-                    <img src="../1year/img/Role do Hamburguer.jpeg" alt="">
+                <div class="estil-img item3">
+                    <img src="../img/Role do Hamburguer.jpeg" alt="">
                     <div class="conteudo">
                         <a href="">Noite do Hamburguer</a>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="img-box">
-            <div class="imagens">
-                <div class="estil-img margem">
-                    <img src="../1year/img/PrimeiraVezSuaCasa.jpeg" alt="">
+                <div class="estil-img item4">
+                    <img src="../img/PrimeiraVezSuaCasa.jpeg" alt="">
                     <div class="conteudo">
                         <a href="">Conhecendo sua Familia</a>
                     </div>
                 </div>
-                <div class="estil-img">
-                    <img src="../1year/img/PrimeiroRole.jpeg" alt="">
+                <div class="estil-img item5">
+                    <img src="../img/PrimeiroRole.jpeg" alt="">
                     <div class="conteudo">
                         <a href="">A</a>
                     </div>
                 </div>
-                <div class="estil-img">
-                    <img src="../1year/img/Role do Hamburguer.jpeg" alt="">
+                <div class="estil-img item6">
+                    <img src="../img/Role do Hamburguer.jpeg" alt="">
                     <div class="conteudo">
                         <a href="">A</a>
                     </div>
