--- a/index.html
+++ b/index.html
@@ -36,38 +36,86 @@
                 <div class="estil-img item1">
                     <img src="../img/PrimeiroRole2.jpeg" alt="">
                     <div class="conteudo">
-                        <a href="">Primeiro Rolê</a>
+                        <p>Primeiro Rolê</p>
                     </div>
                 </div>
                 <div class="estil-img item2">
-                    <img src="../img/PrimeiroRole.jpeg" alt="">
+                    <a href="#"> <img src="../img/PrimeiroRole.jpeg" alt="">
                     <div class="conteudo">
-                        <a href="">Role na pracinha</a>
-                    </div>
+                        <p> Role na pracinha </p>
+                    </div> </a>
                 </div>
                 <div class="estil-img item3">
-                    <img src="../img/Role do Hamburguer.jpeg" alt="">
+                    <a href="#"> <img src="../img/Role do Hamburguer.jpeg" alt="">
                     <div class="conteudo">
-                        <a href="">Noite do Hamburguer</a>
-                    </div>
+                        <p>Noite do Hamburguer</p>
+                    </div> </a>
                 </div>
                 <div class="estil-img item4">
-                    <img src="../img/PrimeiraVezSuaCasa.jpeg" alt="">
+                    <a href="#"> <img src="../img/PrimeiraVezSuaCasa.jpeg" alt="">
                     <div class="conteudo">
-                        <a href="">Conhecendo sua Familia</a>
-                    </div>
+                        <p>Conhecendo sua Familia</p>
+                    </div> </a>
                 </div>
                 <div class="estil-img item5">
-                    <img src="../img/PrimeiroRole.jpeg" alt="">
+                    <a href="#"> <img src="../img/AniversarioDorival.jpeg" alt="">
                     <div class="conteudo">
-                        <a href="">A</a>
-                    </div>
+                        <p>Primeiro Aniversário em Familia</p>
+                    </div> </a>
                 </div>
                 <div class="estil-img item6">
-                    <img src="../img/Role do Hamburguer.jpeg" alt="">
+                    <a href="#"> <img src="../img/Atolados.jpeg" alt="">
                     <div class="conteudo">
-                        <a href="">A</a>
-                    </div>
+                        <p>Ficando atolados</p>
+                    </div> </a>
+                </div>
+                <div class="estil-img item7">
+                    <a href="#"> <img src="../img/PrimeiraViagem.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Primeira Viagem Juntos</p>
+                    </div> </a>
+                </div>
+                <div class="estil-img item8">
+                    <a href="#"> <img src="../img/Alianca.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>O Dia da Aliança</p>
+                    </div> </a>
+                </div>
+                <div class="estil-img item9">
+                    <a href="#"> <img src="../img/Outback.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Indo pra Rio Preto</p>
+                    </div> </a>
+                </div>
+                <div class="estil-img item10">
+                    <a href="#"> <img src="../img/DiaNamorados.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Dia dos Namorados S2</p>
+                    </div> </a>
+                </div>
+                <div class="estil-img item11">
+                    <a href="#"> <img src="../img/Standup.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Standup do Vitor Sarro</p>
+                    </div> </a>
+                </div>
+                <div class="estil-img item12">
+                    <a href="#"> <img src="../img/Fefol.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Folclore Juntinhos</p>
+                    </div> </a>
+                </div>
+                <div class="estil-img item13">
+                    <a href="#"> <img src="../img/Estadio2.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Segunda Viagem!</p>
+                    </div> </a>
+                </div>
+                <div class="estil-img item14">
+                    <a href="#"> <img src="../img/8mes.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Oitavo Mês Juntos</p>
+                    </div> </a>
                 </div>
             </div>
         </div> 
