--- a/index.html
+++ b/index.html
@@ -34,85 +34,85 @@
         <div class="img-box">
             <div class="imagens">
                 <div class="estil-img item1">
-                    <img src="../img/PrimeiroRole2.jpeg" alt="">
+                    <img src="../1year/img/PrimeiroRole2.jpeg" alt="">
                     <div class="conteudo">
                         <p>Primeiro Rolê</p>
                     </div>
                 </div>
                 <div class="estil-img item2">
-                    <a href="#"> <img src="../img/PrimeiroRole.jpeg" alt="">
+                    <a href="#"> <img src="../1year/img/PrimeiroRole.jpeg" alt="">
                     <div class="conteudo">
                         <p> Role na pracinha </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item3">
-                    <a href="#"> <img src="../img/Role do Hamburguer.jpeg" alt="">
+                    <a href="#"> <img src="../1year/img/Role do Hamburguer.jpeg" alt="">
                     <div class="conteudo">
                         <p>Noite do Hamburguer</p>
                     </div> </a>
                 </div>
                 <div class="estil-img item4">
-                    <a href="#"> <img src="../img/PrimeiraVezSuaCasa.jpeg" alt="">
+                    <a href="#"> <img src="../1year/img/PrimeiraVezSuaCasa.jpeg" alt="">
                     <div class="conteudo">
                         <p>Conhecendo sua Familia</p>
                     </div> </a>
                 </div>
                 <div class="estil-img item5">
-                    <a href="#"> <img src="../img/AniversarioDorival.jpeg" alt="">
+                    <a href="#"> <img src="../1year/img/AniversarioDorival.jpeg" alt="">
                     <div class="conteudo">
                         <p>Primeiro Aniversário em Familia</p>
                     </div> </a>
                 </div>
                 <div class="estil-img item6">
-                    <a href="#"> <img src="../img/Atolados.jpeg" alt="">
+                    <a href="#"> <img src="../1year/img/Atolados.jpeg" alt="">
                     <div class="conteudo">
                         <p>Ficando atolados</p>
                     </div> </a>
                 </div>
                 <div class="estil-img item7">
-                    <a href="#"> <img src="../img/PrimeiraViagem.jpeg" alt="">
+                    <a href="#"> <img src="../1year/img/PrimeiraViagem.jpeg" alt="">
                     <div class="conteudo">
                         <p>Primeira Viagem Juntos</p>
                     </div> </a>
                 </div>
                 <div class="estil-img item8">
-                    <a href="#"> <img src="../img/Alianca.jpeg" alt="">
+                    <a href="#"> <img src="../1year/img/Alianca.jpeg" alt="">
                     <div class="conteudo">
                         <p>O Dia da Aliança</p>
                     </div> </a>
                 </div>
                 <div class="estil-img item9">
-                    <a href="#"> <img src="../img/Outback.jpeg" alt="">
+                    <a href="#"> <img src="../1year/img/Outback.jpeg" alt="">
                     <div class="conteudo">
                         <p>Indo pra Rio Preto</p>
                     </div> </a>
                 </div>
                 <div class="estil-img item10">
-                    <a href="#"> <img src="../img/DiaNamorados.jpeg" alt="">
+                    <a href="#"> <img src="../1year/img/DiaNamorados.jpeg" alt="">
                     <div class="conteudo">
                         <p>Dia dos Namorados S2</p>
                     </div> </a>
                 </div>
                 <div class="estil-img item11">
-                    <a href="#"> <img src="../img/Standup.jpeg" alt="">
+                    <a href="#"> <img src="../1year/img/Standup.jpeg" alt="">
                     <div class="conteudo">
                         <p>Standup do Vitor Sarro</p>
                     </div> </a>
                 </div>
                 <div class="estil-img item12">
-                    <a href="#"> <img src="../img/Fefol.jpeg" alt="">
+                    <a href="#"> <img src="../1year/img/Fefol.jpeg" alt="">
                     <div class="conteudo">
                         <p>Folclore Juntinhos</p>
                     </div> </a>
                 </div>
                 <div class="estil-img item13">
-                    <a href="#"> <img src="../img/Estadio2.jpeg" alt="">
+                    <a href="#"> <img src="../1year/img/Estadio2.jpeg" alt="">
                     <div class="conteudo">
                         <p>Segunda Viagem!</p>
                     </div> </a>
                 </div>
                 <div class="estil-img item14">
-                    <a href="#"> <img src="../img/8mes.jpeg" alt="">
+                    <a href="#"> <img src="../1year/img/8mes.jpeg" alt="">
                     <div class="conteudo">
                         <p>Oitavo Mês Juntos</p>
                     </div> </a>
