Colocando novas fotos e datas

--- a/index.html
+++ b/index.html
@@ -47,6 +47,31 @@
                         <p class="subtitle"> 2 de Abril de 2022 </p>
                     </div> </a>
                 </div>
+                 <!-- COLOCAR 3 FOTOS -->                
+
+                 <div class="estil-img item4">
+                    <a href="#"> <img src="../1year/img/img1.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Primeiro Beijo</p>
+                        <p class="subtitle"> 16 de Junho de 2022</p>
+                    </div> </a>
+                </div>
+
+                <div class="estil-img item5">
+                    <a href="#"> <img src="../1year/img/img2.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Primeiro Beijo (depois que voltamos a conversar)</p>
+                        <p class="subtitle"> 11 de Dezembro de 2022</p>
+                    </div> </a>
+                </div>
+
+                <div class="estil-img item6">
+                    <a href="#"> <img src="../1year/img/img3.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Começando a Ficar Sério</p>
+                        <p class="subtitle"> 14 de Janeiro de 2023</p>
+                    </div> </a>
+                </div>
                 <div class="estil-img item3">
                     <a href="#"> <img src="../1year/img/Role do Hamburguer.jpeg" alt="">
                     <div class="conteudo">
@@ -54,97 +79,81 @@
                         <p class="subtitle"> 20 de Janeiro de 2023</p>
                     </div> </a>
                 </div>
-
-                <!-- COLOCAR 3 FOTOS -->                
-
-                <!-- <div class="estil-img item4">
-                    <a href="#"> <img src="../1year/img/Role do Hamburguer.jpeg" alt="">
-                    <div class="conteudo">
-                        <p>Noite do Hamburguer</p>
-                        <p class="subtitle"> 20 de Janeiro de 2023</p>
-                    </div> </a>
-                </div>
-
-                <div class="estil-img item5">
-                    <a href="#"> <img src="../1year/img/Role do Hamburguer.jpeg" alt="">
-                    <div class="conteudo">
-                        <p>Noite do Hamburguer</p>
-                        <p class="subtitle"> 20 de Janeiro de 2023</p>
-                    </div> </a>
-                </div>
-
-                <div class="estil-img item6">
-                    <a href="#"> <img src="../1year/img/Role do Hamburguer.jpeg" alt="">
-                    <div class="conteudo">
-                        <p>Noite do Hamburguer</p>
-                        <p class="subtitle"> 20 de Janeiro de 2023</p>
-                    </div> </a>
-                </div> -->
-
                 <div class="estil-img item7">
                     <a href="#"> <img src="../1year/img/PrimeiraVezSuaCasa.jpeg" alt="">
                     <div class="conteudo">
                         <p>Conhecendo sua Familia</p>
+                        <p class="subtitle"> 22 de Janeiro de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item8">
                     <a href="#"> <img src="../1year/img/AniversarioDorival.jpeg" alt="">
                     <div class="conteudo">
                         <p>Primeiro Aniversário em Familia</p>
+                        <p class="subtitle"> 02 de Fevereiro de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item9">
                     <a href="#"> <img src="../1year/img/Atolados.jpeg" alt="">
                     <div class="conteudo">
                         <p>Ficando atolados</p>
+                        <p class="subtitle"> 19 de Fevereiro de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item10">
                     <a href="#"> <img src="../1year/img/PrimeiraViagem.jpeg" alt="">
                     <div class="conteudo">
                         <p>Primeira Viagem Juntos</p>
+                        <p class="subtitle"> 15 de Março de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item11">
                     <a href="#"> <img src="../1year/img/Alianca.jpeg" alt="">
                     <div class="conteudo">
                         <p>O Dia da Aliança</p>
+                        <p class="subtitle"> 14 de Abril de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item12">
                     <a href="#"> <img src="../1year/img/Outback.jpeg" alt="">
                     <div class="conteudo">
                         <p>Indo pra Rio Preto</p>
+                        <p class="subtitle"> Não lembro a data K </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item13">
                     <a href="#"> <img src="../1year/img/DiaNamorados.jpeg" alt="">
                     <div class="conteudo">
                         <p>Dia dos Namorados S2</p>
+                        <p class="subtitle"> 12 de Junho de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item14">
                     <a href="#"> <img src="../1year/img/Standup.jpeg" alt="">
                     <div class="conteudo">
                         <p>Standup do Vitor Sarro</p>
+                        <p class="subtitle"> 20 de Junho de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item15">
                     <a href="#"> <img src="../1year/img/Fefol.jpeg" alt="">
                     <div class="conteudo">
                         <p>Folclore Juntinhos</p>
+                        <p class="subtitle"> 11 de Agosto de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item16">
                     <a href="#"> <img src="../1year/img/Estadio2.jpeg" alt="">
                     <div class="conteudo">
                         <p>Segunda Viagem!</p>
+                        <p class="subtitle"> 11 de Setembro de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item17">
                     <a href="#"> <img src="../1year/img/8mes.jpeg" alt="">
                     <div class="conteudo">
                         <p>Oitavo Mês Juntos</p>
+                        <p class="subtitle"> 10 de Outubro de 2023 </p>
                     </div> </a>
                 </div>
             </div>
