--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
                         <p> Role na pracinha </p>
                         <p class="subtitle"> 2 de Abril de 2022 </p>
                     </div> </a>
-                </div>
-                 <!-- COLOCAR 3 FOTOS -->                
-
+                </div>            
                  <div class="estil-img item4">
                     <a href="#"> <img src="../1year/img/img1.jpeg" alt="">
                     <div class="conteudo">
@@ -64,7 +62,6 @@
                         <p class="subtitle"> 11 de Dezembro de 2022</p>
                     </div> </a>
                 </div>
-
                 <div class="estil-img item6">
                     <a href="#"> <img src="../1year/img/img3.jpeg" alt="">
                     <div class="conteudo">
@@ -156,8 +153,51 @@
                         <p class="subtitle"> 10 de Outubro de 2023 </p>
                     </div> </a>
                 </div>
+                <div class="estil-img item18">
+                    <a href="#"> <img src="../1year/img/novaImg3.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Caiu o Mundo</p>
+                        <p class="subtitle"> 12 de Outubro de 2023 </p>
+                    </div> </a>
+                </div>
+                <div class="estil-img item19">
+                    <a href="#"> <img src="../1year/img/novaImg1.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Formatura</p>
+                        <p class="subtitle"> 9 de Dezembro de 2023 </p>
+                    </div> </a>
+                </div>
+                <div class="estil-img item20">
+                    <a href="#"> <img src="../1year/img/AnoNovo.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Primeiro Ano Novo</p>
+                        <p class="subtitle"> 31 de Dezembro de 2023 </p>
+                    </div> </a>
+                </div>
+                <div class="estil-img item21">
+                    <a href="#"> <img src="../1year/img/novaImg4.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Role Mais Recente</p>
+                        <p class="subtitle"> 20 de Janeiro de 2024 </p>
+                    </div> </a>
+                </div>
+                <div class="estil-img item22">
+                    <a href="#"> <img src="../1year/img/Tarzan.jpeg" alt="">
+                    <div class="conteudo">
+                        <p>Bônus</p>
+                        <p class="subtitle"> Algumas fotos e momentos que simplesmente amo </p>
+                    </div> </a>
+                </div>
             </div>
         </div> 
+        <div class="endpage">
+            <h4> Eu te amo infinitamente, minha garota ! </h4>
+            <h4> Obrigado por todos os momentos juntos, quero estar com você pro resto da minha vida! </h4>
+            <div class="container-heart">
+                <div class="heart">
+                </div>
+            </div>
+        </div>
     </div>
     <script src="../1year/js/script.js"></script>
 </body>
