--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <div class="container">
         <div class="home-title">
-            <h2> nossos melhores momentos juntos! </h2>
+            <h2> Nossos melhores momentos juntos! </h2>
         </div>
         <!-- <div class="row">
             <div class="col-sm-4">
