Verificações scroll e arrumando celular

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="img-box">
             <div class="imagens">
                 <div class="estil-img item1">
-                    <a href="primeirorole.htm"> <img src="../1year/img/PrimeiroRole2.jpeg" alt="">
+                    <a href="primeirorole.html"> <img src="../1year/img/PrimeiroRole2.jpeg" alt="">
                     <div class="conteudo">
                         <p>Primeiro Rolê</p>
                         <p class="subtitle"> 13 de Março de 2020 </p>
@@ -200,5 +200,6 @@
         </div>
     </div>
     <script src="../1year/js/script.js"></script>
+    <script src="../1year/js/animationText.js"></script>
 </body>
 </html>
