--- a/primeirorole.html
+++ b/primeirorole.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="imagens">
-                <div class="estil-img item1_1">
+                <div class="estil-img item1_2">
                     <a href="./img/primeiroRole/img1.jpeg" data-lightbox="gallery">
                     <img src="./img/primeiroRole/img1.jpeg" alt="">
                     </a>
@@ -33,12 +33,12 @@
         <div class="endpage">
             <p>
                 Esse rolê a gente mal conversava, foi um dos mais aleatórios que ja fui kkkkkkkk, mas desde esse momento conheci seu jeitinho meigo de ser,
-                mal me conhecia e ja quis tirar foto comigo, me senti uma celebridade ali.
+                mal me conhecia e já quis tirar foto comigo, me senti uma celebridade ali.
             </p>
         </div>
     </div>
-
     <script src="../1year/js/script.js"></script>
+    <script src="../1year/js/animationText.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 </body>
 </html>
