--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
                 <div class="heart">
                 </div>
             </div>
+            <footer>
+                <p> You know, i love you so! </p>
+            </footer>
         </div>
     </div>
     <script src="../1year/js/script.js"></script>
