--- a/primeirorole.html
+++ b/primeirorole.html
@@ -35,6 +35,13 @@
                 Esse rolê a gente mal conversava, foi um dos mais aleatórios que ja fui kkkkkkkk, mas desde esse momento conheci seu jeitinho meigo de ser,
                 mal me conhecia e já quis tirar foto comigo, me senti uma celebridade ali.
             </p>
+            <div class="container-heart">
+                <div class="heart">
+                </div>
+            </div>
+            <footer>
+                <p> You know, i love you so! </p>
+            </footer>
         </div>
     </div>
     <script src="../1year/js/script.js"></script>
