Mudando fonte e consertando erros

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div> </a>
                 </div>
                 <div class="estil-img item2">
-                    <a href="#"> <img src="../1year/img/PrimeiroRole.jpeg" alt="">
+                    <a href="rolepraca.html"> <img src="../1year/img/PrimeiroRole.jpeg" alt="">
                     <div class="conteudo">
                         <p> Role na pracinha </p>
                         <p class="subtitle"> 2 de Abril de 2022 </p>
