Utilizando o fancyBox para imagens

--- a/rolepraca.html
+++ b/rolepraca.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rolê Na Pracinha</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="../1year/css/style.css">
     <link rel="stylesheet" href="../1year/css/itens_out.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
@@ -17,17 +18,17 @@
         <div class="img-box">
             <div class="imagens">
                 <div class="estil-img item2_1">
-                    <a href="./img/PrimeiroRole.jpeg" data-lightbox="gallery">
+                    <a href="./img/PrimeiroRole.jpeg" data-fancybox="gallery" class="fancybox">
                     <img src="./img/PrimeiroRole.jpeg" alt="">
                     </a>
                 </div>
                 <div class="estil-img item2_2">
-                    <a href="./img/rolePraca/img2.jpeg" data-lightbox="gallery">
+                    <a href="./img/rolePraca/img2.jpeg" data-fancybox="gallery" class="fancybox">
                     <img src="./img/rolePraca/img2.jpeg" alt="">
                     </a>
                 </div>
                 <div class="estil-img item2_3">
-                    <a href="./img/rolePraca/img1.jpeg" data-lightbox="gallery">
+                    <a href="./img/rolePraca/img1.jpeg" data-fancybox="gallery" class="fancybox">
                     <img src="./img/rolePraca/img1.jpeg" alt="">
                     </a>
                 </div>
@@ -50,6 +51,9 @@
             </footer>
         </div>
     </div>
+    <script src="../1year/js/fancyBox.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
     <script src="../1year/js/script.js"></script>
     <script src="../1year/js/animationText.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
