--- a/primeirorole.html
+++ b/primeirorole.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiro Role</title>
     <link rel="stylesheet" href="../1year/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="../1year/css/itens_out.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -17,14 +18,14 @@
         <div class="img-box">
             <div class="imagens">
                 <div class="estil-img item1_1">
-                    <a href="./img/PrimeiroRole2.jpeg" data-lightbox="gallery">
+                    <a href="./img/PrimeiroRole2.jpeg" data-fancybox="gallery" class="fancybox">
                     <img src="./img/PrimeiroRole2.jpeg" alt="">
                     </a>
                 </div>
             </div>
             <div class="imagens">
                 <div class="estil-img item1_2">
-                    <a href="./img/primeiroRole/img1.jpeg" data-lightbox="gallery">
+                    <a href="./img/primeiroRole/img1.jpeg" data-fancybox="gallery" class="fancybox">
                     <img src="./img/primeiroRole/img1.jpeg" alt="">
                     </a>
                 </div>
@@ -44,6 +45,9 @@
             </footer>
         </div>
     </div>
+    <script src="../1year/js/fancyBox.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
     <script src="../1year/js/script.js"></script>
     <script src="../1year/js/animationText.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
