--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </div> </a>
                 </div>            
                  <div class="estil-img item4">
-                    <a href="#"> <img src="../1year/img/img1.jpeg" alt="">
+                    <a href="primeirobeijo.html"> <img src="../1year/img/img1.jpeg" alt="">
                     <div class="conteudo">
                         <p>Primeiro Beijo</p>
                         <p class="subtitle"> 16 de Junho de 2022</p>
