--- a/primeirobeijo.html
+++ b/primeirobeijo.html
@@ -3,37 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro Role</title>
-    <link rel="stylesheet" href="../1year/css/style.css">
+    <title> Primeiro Beijo </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="../1year/css/style.css">
     <link rel="stylesheet" href="../1year/css/itens_out.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
         <div class="top-image">
-            <h1> Primeiro Rolê </h1>
+            <h1> Primeiro Beijo</h1>
         </div>
         <div class="img-box">
             <div class="imagens">
-                <div class="estil-img item1_1">
-                    <a href="./img/PrimeiroRole2.jpeg" data-fancybox="gallery" class="fancybox">
-                    <img src="./img/PrimeiroRole2.jpeg" alt="">
-                    </a>
-                </div>
-            </div>
-            <div class="imagens">
-                <div class="estil-img item1_2">
-                    <a href="./img/primeiroRole/img1.jpeg" data-fancybox="gallery" class="fancybox">
-                    <img src="./img/primeiroRole/img1.jpeg" alt="">
+                <div class="estil-img item3_1">
+                    <a href="./img/img1.jpeg" data-fancybox="gallery" class="fancybox">
+                    <img src="./img/img1.jpeg" alt="">
                     </a>
                 </div>
             </div>
         </div>
         <div class="endpage">
             <p>
-                Esse rolê a gente mal conversava, foi um dos mais aleatórios que ja fui kkkkkkkk, mas desde esse momento conheci seu jeitinho meigo de ser,
-                mal me conhecia e já quis tirar foto comigo, me senti uma celebridade ali.
+                Não temos nenhuma foto desses belos dias, infelizmente, mas eu não podia deixa de fora de jeito algum!
+                <br> <br>As primeiras vezes que nos beijamos! Tudo começou com você perguntando se eu queria te beijar (danada), na hora eu falei que sim,
+                como eu iria perder uma oportunidade dessas??? Mas no fundo eu achava que era só uma brincadeira, até que veio suas amigas perguntando se eu queria mesmo te beijar kkkkkk
+                <br> <br>Que momento maravilhoso, tava nervoso, você tinha sumido, mas acabou que deu certo. O melhor beijo da minha vida, já tinha te falado isso, por mais que você ficasse conversando toda hora kkkkkk.
+                Ficamos também nos outros dias, eu achava maravilhoso!!!!
+                <br><br> Essa foto foi do ultimo dia dos shows, quando nós dormimos abraçados pela primeira vez, não é por nada nao, mas o destino sabia de algo!
+                <br><br> Cada beijo que eu te dei foi único!
             </p>
             <div class="container-heart">
                 <div class="heart">
