Arrumando coração e tamanho celular

--- a/primeirobeijo.html
+++ b/primeirobeijo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Primeiro Beijo </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css" />
     <link rel="stylesheet" href="../1year/css/style.css">
     <link rel="stylesheet" href="../1year/css/itens_out.css">
@@ -34,8 +35,9 @@
                 <br><br> Cada beijo que eu te dei foi único!
             </p>
             <div class="container-heart">
-                <div class="heart">
-                </div>
+                <i class="fa fa-heart"></i>
+                <!-- <div class="heart">
+                </div> -->
             </div>
             <footer>
                 <p> You know, i love you so! </p>
