--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>365 Dias Com Você !</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/itens.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -194,8 +195,9 @@
             <h4> Eu te amo infinitamente, minha garota ! </h4>
             <h4> Obrigado por todos os momentos juntos, quero estar com você pro resto da minha vida! </h4>
             <div class="container-heart">
-                <div class="heart">
-                </div>
+                <i class="fa fa-heart"></i>
+                <!-- <div class="heart">
+                </div> -->
             </div>
             <footer>
                 <p> You know, i love you so! </p>
