--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                 </div>
 
                 <div class="estil-img item5">
-                    <a href="#"> <img src="../1year/img/img2.jpeg" alt="">
+                    <a href="primeirobeijo2.html"> <img src="../1year/img/img2.jpeg" alt="">
                     <div class="conteudo">
                         <p>Primeiro Beijo (depois que voltamos a conversar)</p>
                         <p class="subtitle"> 11 de Dezembro de 2022</p>
                     </div> </a>
                 </div>
                 <div class="estil-img item6">
-                    <a href="#"> <img src="../1year/img/img3.jpeg" alt="">
+                    <a href="comecoFicarSerio.html"> <img src="../1year/img/img3.jpeg" alt="">
                     <div class="conteudo">
                         <p>Começando a Ficar Sério</p>
                         <p class="subtitle"> 14 de Janeiro de 2023</p>
