Novas telas (preencher paragrafo)

--- a/index.html
+++ b/index.html
@@ -71,35 +71,35 @@
                     </div> </a>
                 </div>
                 <div class="estil-img item3">
-                    <a href="#"> <img src="../1year/img/Role do Hamburguer.jpeg" alt="">
+                    <a href="noiteHamburguer.html"> <img src="../1year/img/Role do Hamburguer.jpeg" alt="">
                     <div class="conteudo">
                         <p>Noite do Hamburguer</p>
                         <p class="subtitle"> 20 de Janeiro de 2023</p>
                     </div> </a>
                 </div>
                 <div class="estil-img item7">
-                    <a href="#"> <img src="../1year/img/PrimeiraVezSuaCasa.jpeg" alt="">
+                    <a href="conhecendoSuaFam.html""> <img src="../1year/img/PrimeiraVezSuaCasa.jpeg" alt="">
                     <div class="conteudo">
                         <p>Conhecendo sua Familia</p>
                         <p class="subtitle"> 22 de Janeiro de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item8">
-                    <a href="#"> <img src="../1year/img/AniversarioDorival.jpeg" alt="">
+                    <a href="primeiroAniv.html"> <img src="../1year/img/AniversarioDorival.jpeg" alt="">
                     <div class="conteudo">
                         <p>Primeiro Aniversário em Familia</p>
                         <p class="subtitle"> 02 de Fevereiro de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item9">
-                    <a href="#"> <img src="../1year/img/Atolados.jpeg" alt="">
+                    <a href="ficandoAtolados.html"> <img src="../1year/img/Atolados.jpeg" alt="">
                     <div class="conteudo">
                         <p>Ficando atolados</p>
                         <p class="subtitle"> 19 de Fevereiro de 2023 </p>
                     </div> </a>
                 </div>
                 <div class="estil-img item10">
-                    <a href="#"> <img src="../1year/img/PrimeiraViagem.jpeg" alt="">
+                    <a href="primeiraViagem.html"> <img src="../1year/img/PrimeiraViagem.jpeg" alt="">
                     <div class="conteudo">
                         <p>Primeira Viagem Juntos</p>
                         <p class="subtitle"> 15 de Março de 2023 </p>
